# antzilla

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  Dockerfile.dashboard  README.md  SPEC.md  docker-compose.yml  pyproject.toml
migrations/: 001_init.sql  00_init_dbs.sql
prompts/: brand_designer.txt  deep_scout.txt  idea_factory.txt  meta_orchestrator.txt
scripts/: deploy-gcp.sh  entrypoint.sh  seed_test_data.py  setup-server.sh  setup.sh  update.sh
src/: config.py  crypto.py  db.py  hatchet_client.py  knowledge.py  llm.py  main.py  quality.py  slack.py
src/agents/: analytics_agent.py  base_agent.py  billing_agent.py  brand_designer.py  budget_guardian.py  builder.py  competitor_watch.py  content_engine.py  copywriter.py  deep_scout.py  design_qa.py  devops_agent.py  domain_provisioner.py  email_nurture.py  fulfillment.py  growth_hacker.py  i18n_agent.py  idea_factory.py  infra_setup.py  knowledge_agent.py  legal_guardrail.py  meta_orchestrator.py  onboarding_agent.py  referral_agent.py  self_reflection.py  social_agent.py  social_proof.py  support_agent.py  upsell_agent.py  (+2 more)
template-repo/: .env.example  next.config.ts  package.json  tailwind.config.ts
tests/: test_analytics.py  test_billing_support_voice.py  test_brand_designer.py  test_builder.py  test_channel_discovery.py  test_content_social_referral.py  test_crypto_config_secrets.py  test_dashboard.py  test_deep_scout.py  test_distribution.py  test_domain_provisioner.py  test_idea_factory.py  test_integration_lifecycle.py  test_knowledge.py  test_meta.py  test_operational_systems.py
(+80 files in other folders)
