[project]
name = "factory"
version = "0.1.0"
description = "Autonomous business factory — discovers, builds, markets, and operates micro-SaaS businesses"
requires-python = ">=3.12"
dependencies = [
    # Orchestration
    "hatchet-sdk",
    # LLM
    "anthropic",
    # Database
    "sqlalchemy[asyncio]",
    "asyncpg",
    "psycopg2-binary",
    "pgvector",
    # Config + crypto + auth
    "pydantic",
    "cryptography",
    "supabase",
    # HTTP
    "httpx",
    # Integrations
    "stripe",
    "sendgrid",
    "resend",
    "slack-sdk",
    # Web framework (dashboard)
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "python-multipart",
    # Utilities
    "tenacity",
    "structlog",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
